update modal home

--- a/public/index.html
+++ b/public/index.html
@@ -52,6 +52,7 @@
     -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="%PUBLIC_URL%/js/jquery.min.js" crossorigin="anonymous"></script>
+    <script src="%PUBLIC_URL%/js/popper.min.js" crossorigin="anonymous"></script>
     <script src="%PUBLIC_URL%/js/bootstrap.min.js" crossorigin="anonymous"></script>
     <script src="%PUBLIC_URL%/js/owl.carousel.min.js" crossorigin="anonymous"></script>
 
