--- a/public/index.html
+++ b/public/index.html
@@ -5,10 +5,7 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="orange"
-      content="orange"
-    />
+    <meta name="orange" content="Orange is a professional corporate incentive brand and stands as divison group of Panorama JTB Tours Indonesia with long of experience in planning, preparing and executing any incentive trip provided for any company across Indonesia."/>
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <!-- Bootstrap CSS -->
