update axios dan fancybox

--- a/public/index.html
+++ b/public/index.html
@@ -17,6 +17,8 @@
     <link rel="stylesheet" href="%PUBLIC_URL%/css/query.css">
     <link rel="stylesheet" href="%PUBLIC_URL%/css/owl.carousel.min.css">
 
+    <link rel="stylesheet" href="%PUBLIC_URL%/css/jquery.fancybox.min.css">
+
    
 
     <title>Orange</title>
@@ -28,7 +30,9 @@
     <script src="%PUBLIC_URL%/js/jquery.min.js" crossorigin="anonymous"></script>
     <script src="%PUBLIC_URL%/js/popper.min.js" crossorigin="anonymous"></script>
     <script src="%PUBLIC_URL%/js/bootstrap.min.js" crossorigin="anonymous"></script>
-    <script src="%PUBLIC_URL%/js/owl.carousel.min.js" crossorigin="anonymous"></script>    
+    <script src="%PUBLIC_URL%/js/owl.carousel.min.js" crossorigin="anonymous"></script>
+    <script src="%PUBLIC_URL%/js/jquery.fancybox.min.js" crossorigin="anonymous"></script>
+    <script src="%PUBLIC_URL%/js/slick.min.js" crossorigin="anonymous"></script>    
     <script src="%PUBLIC_URL%/js/main.js" crossorigin="anonymous"></script>
   </body>
 </html>
